--- a/Main/Views/TambahPengaduan.xaml
+++ b/Main/Views/TambahPengaduan.xaml
@@ -8,10 +8,9 @@
          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:main="clr-namespace:Main"
         xmlns:utilities="clr-namespace:Main.Utilities"
-        MinWidth="550" MinHeight="600" Width="800" WindowStartupLocation="CenterScreen"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
      TextElement.FontWeight="Regular"
-     TextElement.FontSize="13"
+     TextElement.FontSize="13" WindowState="Maximized"
      TextOptions.TextFormattingMode="Ideal"
      TextOptions.TextRenderingMode="Auto"
      Background="{DynamicResource MaterialDesignPaper}"
