--- a/Main/Charts/LaporLangsung.xaml
+++ b/Main/Charts/LaporLangsung.xaml
@@ -1,14 +1,12 @@
 ﻿<main:ChartMaster
-            xmlns:main="clr-namespace:Main"
-     x:Class="Main.Charts.RasioPerempuanKorbanKekerasan"
+    xmlns:main="clr-namespace:Main" x:Class="Main.Charts.LaporLangsung"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Main.Charts"
-               xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-             mc:Ignorable="d"   Height="400"
+             mc:Ignorable="d" Height="400"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -16,21 +14,18 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid >
-            <StackPanel>
-                <Label Width="auto" HorizontalContentAlignment="Left" Content="{Binding Title}"></Label>
-                <Label Width="auto" HorizontalContentAlignment="Left" Content="Per 10.000 Perempuan "></Label>
-            </StackPanel>
+            <Label Width="auto" HorizontalContentAlignment="Left" Content="{Binding Title}"></Label>
             <WrapPanel HorizontalAlignment="Right">
                 <Button Style="{DynamicResource btnRefresh}" Command="{Binding RefreshChartCommand}" Background="{x:Null}"/>
                 <Button Style="{DynamicResource btnPrint}" Command="{Binding PrintCommand}"/>
             </WrapPanel>
         </Grid>
-        <lvc:CartesianChart Grid.Row="1" ScrollHorizontalTo="100"  Series="{Binding SeriesCollection}" LegendLocation="Bottom" >
+        <lvc:CartesianChart Grid.Row="1"    Series="{Binding SeriesCollection}" LegendLocation="Bottom" >
             <lvc:CartesianChart.AxisY>
-                <lvc:Axis Title="Jumlah" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
+                <lvc:Axis Title="Jumlah" Width="250"  LabelFormatter="{Binding YFormatter}"></lvc:Axis>
             </lvc:CartesianChart.AxisY>
             <lvc:CartesianChart.AxisX>
-                <lvc:Axis Title="Distrik" Labels="{Binding Labels}">
+                <lvc:Axis Title="Tempat Kejadian" Labels="{Binding Labels}">
                     <lvc:Axis.Separator>
                         <lvc:Separator IsEnabled="False" Step="1"></lvc:Separator>
                     </lvc:Axis.Separator>
