--- a/Main/Charts/RasioAnakKorbanKekerasan.xaml
+++ b/Main/Charts/RasioAnakKorbanKekerasan.xaml
@@ -1,12 +1,10 @@
 ﻿<main:ChartMaster
-            xmlns:main="clr-namespace:Main"
-     x:Class="Main.Charts.RasioPerempuanKorbanKekerasan"
+    xmlns:main="clr-namespace:Main" x:Class="Main.Charts.RasioAnakKorbanKekerasan"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Main.Charts"
-               xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              mc:Ignorable="d"   Height="400"
              d:DesignHeight="450" d:DesignWidth="800">
@@ -18,7 +16,7 @@
         <Grid >
             <StackPanel>
                 <Label Width="auto" HorizontalContentAlignment="Left" Content="{Binding Title}"></Label>
-                <Label Width="auto" HorizontalContentAlignment="Left" Content="Per 10.000 Perempuan "></Label>
+                <Label Width="auto" HorizontalContentAlignment="Left" Content="Per 10.000 Anak"></Label>
             </StackPanel>
             <WrapPanel HorizontalAlignment="Right">
                 <Button Style="{DynamicResource btnRefresh}" Command="{Binding RefreshChartCommand}" Background="{x:Null}"/>
